# markitdown-win

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: installer.iss  markitdown_gui.spec
src/markitdown_gui/: __main__.py  app.py  main_window.py  worker.py
