[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdown-gui"
version = "0.1.0"
description = "Desktop GUI for Microsoft's markitdown — convert documents to Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    # Doc-focused extras. To also handle audio / YouTube / OCR, install
    # markitdown[all] instead (pulls in PyTorch — multi-GB).
    "markitdown[pdf,docx,pptx,xlsx,xls,outlook]>=0.0.1",
]

[project.gui-scripts]
markitdown-gui = "markitdown_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
